Reduce Cyclomatic and Cognitive complexy